# shadowing-app

./: .editorconfig  .env.local.example  .gitignore  Makefile  README.md  shadowing-app.code-workspace
backend/: .env.example  main.py  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  database.py
backend/app/models/: material.py  practice.py
backend/app/routers/: materials.py  practice.py
backend/app/services/: ai_service.py  gamification_service.py  scoring_service.py  stt_service.py  timestamp_service.py  tts_service.py
docs/: shadowing-app-requirements.html
frontend/: .env.local.example  .eslintrc.json  .prettierignore  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/history/: page.tsx
frontend/app/login/: page.tsx
frontend/app/materials/[id]/: page.tsx
frontend/app/materials/create/: page.tsx
frontend/components/create/: MaterialForm.tsx
frontend/components/history/: PracticeList.tsx  StatsCards.tsx
frontend/components/home/: ContinueBanner.tsx  DailyGoalCard.tsx  MaterialGrid.tsx  StreakBanner.tsx
frontend/components/layout/: Container.tsx  Navbar.tsx
frontend/components/practice/: AudioPlayer.tsx  RecordingMode.tsx  SubtitleDisplay.tsx
frontend/components/providers/: AuthProvider.tsx
frontend/components/result/: AIFeedback.tsx  ComparisonView.tsx  Confetti.tsx  ScoreDisplay.tsx
frontend/store/: auth-store.ts  practice-store.ts  stats-store.ts
frontend/styles/: globals.css
frontend/types/: material.ts  practice.ts  stats.ts
supabase/migrations/: 001_initial_schema.sql
(+1 files in other folders)
